syntax = "proto3";

package proto;

option go_package = "block";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "blockV2.proto";

message HeaderInfo {
  HeaderV2 Header = 1;
  bytes    Hash   = 2;
}

message HeaderInfoList{
  repeated HeaderInfo Headers = 1;
}
