syntax = "proto3";

package proto;

option go_package = "slash";
option (gogoproto.stable_marshaler_all) = true;

import "slash.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/ElrondNetwork/elrond-go-core/data/block/headerInfo.proto";

message MultipleHeaderProposalProof {
  SlashingType   Type        = 1;
  ThreatLevel    Level       = 2;
  HeaderInfoList HeadersInfo = 3 [(gogoproto.nullable) = false];
}
